--- a/Diff-Game1/diff-game.html
+++ b/Diff-Game1/diff-game.html
@@ -12,7 +12,7 @@
 	<h1> How Many Differences We Have ? </h1>
 	<br>
 
-	<img width="700px" height="450px" id="img" src="/Users/rbk19/Desktop/Diff-Game1/photos/3 diff.jpg">
+	<img width="700px" height="450px" id="img" src="3 diff.jpg">
 	<br>
 	
   <div class="container">
@@ -82,12 +82,12 @@
 </dir>
 	<script>
 		var c = 0; //counter for array's elements
-		var arr = [{src:'photos/3 diff.jpg', val: 3},
-    {src:'/Users/rbk19/Desktop/Diff-Game1/photos/kittydiferencias5.png',val:5},
-    {src:'/Users/rbk19/Desktop/Diff-Game1/photos/10diff.jpg',val:10},
-    {src:'/Users/rbk19/Desktop/Diff-Game1/photos/900x580 diff 4.jpg',val:4},
-    {src:'/Users/rbk19/Desktop/Diff-Game1/photos/3 diffe.png', val:3},
-    {src:'/Users/rbk19/Desktop/Diff-Game1/photos/picsart_10-03-11.13.15.jpg',val:0}];
+		var arr = [{src:'photos/3_diff.jpg', val: 3},
+    {src:'kittydiferencias5.png',val:5},
+    {src:'10diff.jpg',val:10},
+    {src:'900x580 diff 4.jpg',val:4},
+    {src:'3_diffe.png', val:3},
+    {src:'picsart_10-03-11.13.15.jpg',val:0}];
 
 
 		$('button#btn').on('click', function() {
