--- a/Diff-Game1/diff-game.html
+++ b/Diff-Game1/diff-game.html
@@ -85,7 +85,7 @@
 		var arr = [{src:'photos/3_diff.jpg', val: 3},
     {src:'kittydiferencias5.png',val:5},
     {src:'10diff.jpg',val:10},
-    {src:'900x580 diff 4.jpg',val:4},
+    {src:'diff_4.jpg',val:4},
     {src:'3_diffe.png', val:3},
     {src:'picsart_10-03-11.13.15.jpg',val:0}];
 
